@@ -7,6 +7,7 @@
 - fix result null check in read_one_map().
 - fix LDAP result leaks on error paths.
 - code analysis fixes part 1.
+- fix not bind mounting local filesystem.
 
 28/06/2011 autofs-5.0.6
 -----------------------
